[IMS-249]- function store details adding incident
