# ims-server/src/app.ts
@@ -14,7 +14,7 @@ import aggregationRouter from './routes/aggrigationRouter';
 import tagRouter from './routes/tagRouter';
 import timelineEventRouter from './routes/timelineEventRouter';
 import attachmentRouter from './routes/awsRouter';
-
+import liveStatusRouter from './routes/systemStatusRoute';
 
 const port = config.server.port
 const app = express()
@@ -60,6 +60,7 @@ app.use('/aggregation', aggregationRouter)
 app.use('/tag', tagRouter)
 app.use('/timelineEvent', timelineEventRouter)
 app.use('/attachment', attachmentRouter)
+app.use('/livestatus',liveStatusRouter)
 app.get('/', (req: Request, res: Response): void => {
   res.redirect('/swagger')
 });
